# task2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  task_2.docx
config/: runtime_config.example.json
docs/: solution.md
example/: clean_dataset_super.py  extract_super.sc  final_llm_prompt_54.txt  final_llm_prompt_81_pure.txt
example/cleaned_code/: CWE78_OS_Command_Injection__char_connect_socket_execl_81_bad.cpp  CWE78_OS_Command_Injection__char_connect_socket_execl_81_goodG2B.cpp  CWE78_OS_Command_Injection__char_connect_socket_execl_81a.cpp
joern_scripts/: find_case_findings.sc
results/: analysis_results.csv  analysis_results.json  good_sample_results.json  summary.md
results/llm_prompts/: CWE259_Hard_Coded_Password__w32_char_51.txt  CWE259_Hard_Coded_Password__w32_char_52.txt  CWE259_Hard_Coded_Password__w32_char_53.txt  CWE259_Hard_Coded_Password__w32_char_54.txt  CWE259_Hard_Coded_Password__w32_char_61.txt  CWE259_Hard_Coded_Password__w32_char_62.txt  CWE259_Hard_Coded_Password__w32_char_81.txt  CWE259_Hard_Coded_Password__w32_char_82.txt  CWE259_Hard_Coded_Password__w32_char_83.txt  CWE259_Hard_Coded_Password__w32_char_84.txt  CWE78_OS_Command_Injection__char_connect_socket_execl_51.txt  CWE78_OS_Command_Injection__char_connect_socket_execl_52.txt  CWE78_OS_Command_Injection__char_connect_socket_execl_53.txt  (+7 more)
scratch/: debug_cpg_dataflow_query_84_out.txt  debug_cpg_dataflow_query_out.txt  debug_cwe78_dataflow_query_out.txt  debug_flow_type_out.txt  debug_shell_queries_51_out.txt
src/hybrid_vuln_audit/: cli.py  (+11 more)
tests/: test_pipeline.py
(+127 files in other folders)
