[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-vuln-audit"
version = "0.1.0"
description = "Hybrid static-analysis plus DeepSeek-R1 auditing pipeline for the Juliet benchmark subset."
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
